--- a/WizLib/appsettings.json
+++ b/WizLib/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-       "DefaultConnection": "Server=MSI;Database=WizLib;Trusted_Connection=True;MultipleActiveResultSets=true"
+       "DefaultConnection": "Server=MSI;Database=WizLib2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
